# university-club-website.backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  sonar-project.properties
.github/: workflows
.github/workflows/: build.yml
backend/core_page/: settings.py  urls.py
src/: manage.py
src/auth/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
src/core/: apps.py  asgi.py  settings.py  urls.py
src/core_page/: asgi.py  settings.py  urls.py  views.py  wsgi.py
